@@ -2,6 +2,7 @@ Changes between 2.1.3 and [next version]
 ----------------------------------------
 
 - fix issue83: link to generated funcarg list
+- fix issue74: pyarg module names are now checked against imp.find_module false positives
 
 Changes between 2.1.2 and 2.1.3
 ----------------------------------------
